# isomdl

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  deny.toml  sync-doc-includes.sh  sync-libdoc-includes.sh  sync-readme-includes.sh  test.pem
.github/workflows/: ci.yaml
docs/: on_simulated_device.txt  on_simulated_reader.txt  simulated_device_and_reader.txt
examples/: Cargo.toml  README.md  common.rs  on_simulated_device.rs  on_simulated_reader.rs  run.sh  simulated_device_and_reader.rs  simulated_device_and_reader_basic.rs  simulated_device_and_reader_state.rs  simulated_device_and_reader_structured.rs
examples/src/: device_and_reader.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: mdoc.rs
macros/: Cargo.toml
macros/src/: cbor_serializable.rs  fields_names.rs  from_json.rs  lib.rs  to_cbor.rs
scripts/: README.md  fetch-vical.sh  sync-doc-includes.sh  sync-md-includes.sh  sync-readme-includes.sh  sync-rustdoc-includes.sh  test.sh  update-rustdoc-includes.sh
scripts/tests/: update-md-includes.sh  update-rustdoc-includes.sh
src/: backend.rs  cbor.rs  cose.rs  cose_key.rs  device_engagement.rs  device_request.rs  device_response.rs  lib.rs  main.rs  mdoc.rs  session.rs  x5chain.rs
src/cbor/: to_cbor.rs
src/cose/: key.rs  mac0.rs  serialize.rs  serialized_as_cbor_value.rs  sign1.rs  tags.rs
src/definitions/: app_attestation.rs  device_engagement.rs  device_request.rs  device_response.rs  device_signed.rs  fulldate.rs  issuer_signed.rs  issuer_signed_dehydrated.rs  latin1.rs  mcd.rs  mod.rs  mso.rs  oid4vp.rs  org_iso_18013_5_1_aamva.rs  session.rs  validated_request.rs  validated_response.rs  validity_info.rs
src/definitions/device_engagement/: error.rs  nfc_handover.rs  nfc_options.rs
src/definitions/device_engagement/nfc/: apdu.rs  apdu_handover.rs  apdu_handover_reader.rs  ble.rs  handover.rs  mod.rs  ndef.rs  ndef_handover.rs  ndef_handover_reader.rs  ndef_parser.rs  util.rs
src/definitions/device_key/: cose_key.rs  mod.rs
src/definitions/helpers/: b_tree_map_cbor.rs  b_tree_map_string_cbor.rs  bytestr.rs  mod.rs  non_empty_map.rs  non_empty_vec.rs  string_cbor.rs  tag24.rs  tag24_ciborium.rs
src/definitions/mdl_data_elements/: ISO18013-5.rs  us_drivers_license.rs
src/definitions/namespaces/: fulldate.rs  latin1.rs  mod.rs
src/definitions/namespaces/org_iso_18013_5_1/: age_over.rs  alpha2.rs  biometric_template.rs  driving_privileges.rs  eye_colour.rs  hair_colour.rs  issuing_jurisdiction.rs  mod.rs  sex.rs  tdate.rs  un_distinguishing_sign.rs
src/definitions/namespaces/org_iso_18013_5_1_aamva/: county_code.rs  dhs_compliance.rs  domestic_driving_privileges.rs  edl_indicator.rs  mod.rs  name_suffix.rs  name_truncation.rs  present.rs  race_and_ethnicity.rs  sex.rs  weight_range.rs
src/definitions/namespaces/org_iso_18013_5_1_vical/: certificate_info.rs  certificate_profile.rs  doc_type.rs  extension.rs  mod.rs  vical_cose_sign1.rs
src/definitions/traits/: from_json.rs  mod.rs  to_cbor.rs
src/definitions/x509/: crl.rs  error.rs  extensions.rs  mod.rs  trust_anchor.rs  util.rs  x5chain.rs
src/definitions/x509/crl/: crl_fetcher.rs  error.rs  mod.rs  reqwest_client.rs  testcrl.der
src/definitions/x509/revocation/: error.rs  fetcher.rs  http.rs  mod.rs  reqwest_client.rs
src/definitions/x509/validation/: error.rs  mod.rs  names.rs  signature.rs  validity.rs
src/definitions/x509/validation/extensions/: basic_constraints.rs  crl_distribution_points.rs  extended_key_usage.rs  issuer_alternative_name.rs  key_usage.rs  mod.rs  subject_key_identifier.rs
src/issuance/: mcd.rs  mdoc.rs  mod.rs  x5chain.rs
src/mdoc/: bytestr.rs  cose_key.rs  mod.rs  non_empty_vec.rs  tag24.rs  validity_info.rs  x5chain.rs
src/presentation/: authentication.rs  device.rs  holder.rs  mdoc.rs  mdoc_auth.rs  mdocreader.rs  mod.rs  reader.rs  reader_utils.rs  trust_anchor.rs
src/presentation/authentication/: mdoc.rs  mod.rs
src/presentation/device/: oid4vp.rs
src/presentation/reader/: oid4vp.rs
src/vical/: mod.rs
test/: dresp.cbor  issuer_signed.cbor
test/definitions/: device_engagement.cbor  device_request.cbor  device_response.cbor  issuer_signed_dehydrated.cbor  namespaced_data.cbor
test/definitions/cose/mac0/: secret_key  secret_key_aes_cbc_mac  serialized.cbor  serialized_aes_cbc_mac.cbor
test/definitions/cose/sign1/: secret_key  serialized.cbor
test/definitions/cose_key/: ec_p256.cbor
test/definitions/namespaces/org_iso_18013_5_1_vical/: vical.json
test/definitions/session/: e_device_key.cbor  reader_session_key.cbor  session_establishment.cbor  session_transcript.cbor  shared_secret.cbor
test/issuance/: 256-cert.der  256-cert.pem  256-key.pem  384-cert.pem  384-key.pem  521-cert.pem  521-key.pem  device_key.b64  holder_testing_key.b64  issuer-cert.pem  portrait.b64  portrait.b64u  verifier_testing_key.b64
test/presentation/: isomdl_iaca_intermediate.pem  isomdl_iaca_leaf_signer.pem  isomdl_iaca_root_cert.pem  isomdl_iaca_signer.pem  isomdl_incorrect_iaca_signer.pem  owf_multipaz_ds_p384.pem  owf_multipaz_iaca_p384.pem  reader_auth.pem  reader_key.pem
test/vical/: aamva-vical-2025-11-18-1763491092481.cbor  aamva_ca_intermediate.crt  aamva_ca_root.crt
tests/: README.md  common.rs  integration_test_simulated_device_and_reader.rs  namespace.rs  on_simulated_device.rs  on_simulated_reader.rs  presentation-e2e.rs  simulated_device_and_reader.rs  simulated_device_and_reader_basic.rs  simulated_device_and_reader_state.rs  simulated_device_and_reader_structured.rs
tests/data/: sec1.pem  stringified-mdl.txt
