[package]
name = "isomdl"
version = "0.1.0"
edition = "2021"
description = "ISO mDL implementation in Rust"
readme = "README.md"
homepage = "https://github.com/spruceid/isomdl"
repository = "https://github.com/spruceid/isomdl"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
ecdsa = { version = "0.14.4", features = ["serde"] }
p256 = { version = "0.11.1", features = ["serde", "ecdh"] }
p384 = { version = "0.11.2", features = ["serde", "ecdh"] }
rand = { version = "0.8.5", features = ["getrandom"] }
openssl = "0.10.41"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = { version = "0.11.2", features = ["tags"] }
serde_json = "1.0"
sha2 = "0.10.5"
thiserror = "1.0"
elliptic-curve = "0.12.3"
hkdf = "0.12.3"
hex-literal = "0.3.4"
aes-gcm = "0.10.1"
hmac = "0.12.1"
aes = "0.8.1"
sec1 = "0.3.0"
uuid = { version = "1.2", features = ["v1", "std", "rng", "serde"] }
time = { version = "0.3.14", features = ["formatting", "parsing", "macros"] }
zeroize = { version = "1.4", features = ["zeroize_derive"] }
signature = "1.6"
tracing = "0.1"
base64 = "0.13"

ssi-jwk = { git = "https://github.com/spruceid/ssi", rev = "19a177d" }

[dependencies.cose-rs]
git = "ssh://git@github.com/spruceid/cose-rs.git"
rev = "2656fd9"

[dev-dependencies]
hex = "0.4.3"
p256 = "0.11.1"
serde_json = "*"
