[package]
name = "isomdl"
version = "0.1.0"
edition = "2021"
description = "ISO mDL implementation in Rust"
readme = "README.md"
homepage = "https://github.com/spruceid/isomdl"
repository = "https://github.com/spruceid/isomdl"
documentation = "https://docs.rs/isomdl"
license = "Apache-2.0 OR MIT"
exclude = ["test/"]

[dependencies]
anyhow = "1.0"
ecdsa = { version = "0.16.0", features = ["serde"] }
p256 = { version = "0.13.0", features = ["serde", "ecdh"] }
p384 = { version = "0.13.0", features = ["serde", "ecdh"] }
rand = { version = "0.8.5", features = ["getrandom"] }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = { version = "0.11.2", features = ["tags"] }
serde_json = "1.0"
sha2 = "0.10.6"
thiserror = "1.0"
elliptic-curve = "0.13.1"
hkdf = "0.12.3"
hex-literal = "0.3.4"
aes-gcm = "0.10.1"
hmac = "0.12.1"
aes = "0.8.2"
sec1 = "0.7.1"
uuid = { version = "1.3", features = ["v1", "v4", "std", "rng", "serde"] }
time = { version = "0.3.20", features = ["formatting", "parsing", "macros"] }
zeroize = { version = "1.5", features = ["zeroize_derive"] }
signature = { version = "2.0.0", features = ["std"] }
async-signature = "0.3.0"
#tracing = "0.1"
base64 = "0.13"
pem-rfc7468 = "0.7.0"
x509-cert = { version = "0.1.1", features = ["pem"] }
coset = { version = "0.3.7", features = ["std"] }
ciborium = "0.2.2"

ssi-jwk = { version = "0.1" }
isomdl-macros = { version = "0.1.0", path = "macros" }
clap = { version = "4", features = ["derive"] }
clap-stdin = "0.5.1"
digest = "0.10.7"
serde_bytes = "0.11.15"

[dev-dependencies]
hex = "0.4.3"
p256 = "0.13.0"
serde_json = "*"

