[package]
name = "isomdl"
version = "0.1.0"
edition = "2021"
description = "ISO mDL implementation in Rust"
readme = "README.md"
homepage = "https://github.com/spruceid/isomdl"
repository = "https://github.com/spruceid/isomdl"
documentation = "https://docs.rs/isomdl"
license = "Apache-2.0 OR MIT"
exclude = ["test/"]

[[bin]]
name = "isomdl-utils"
path = "src/bin/utils.rs"

[dependencies]
anyhow = "1.0"
ecdsa = { version = "0.16.9", features = ["serde", "verifying"] }
p256 = { version = "0.13.0", features = ["serde", "ecdh"] }
p384 = { version = "0.13.0", features = ["serde", "ecdh"] }
rand = { version = "0.8.5", features = ["getrandom"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11.0"
sha2 = { version = "0.10.8", features = ["oid"] }
thiserror = "1.0"
elliptic-curve = "0.13.1"
hkdf = "0.12.3"
hex-literal = "0.3.4"
aes-gcm = "0.10.1"
hmac = "0.12.1"
aes = "0.8.2"
sec1 = "0.7.1"
uuid = { version = "1.3", features = ["v1", "v4", "std", "rng", "serde"] }
time = { version = "0.3.35", features = ["formatting", "parsing", "macros"] }
zeroize = { version = "1.5", features = ["zeroize_derive"] }
signature = { version = "2.0.0", features = ["std"] }
async-signature = "0.3.0"
#tracing = "0.1"
base64 = "0.13"
pem-rfc7468 = "0.7.0"
x509-cert = { version = "0.2.4", features = ["pem", "builder"] }
ssi-jwk = "0.2.1"
isomdl-macros = { version = "0.1.0", path = "macros" }
clap = { version = "4", features = ["derive"] }
clap-stdin = "0.2.1"
const-oid = "0.9.2"
der = { version = "0.7", features = ["std", "derive", "alloc"] }
hex = "0.4.3"
asn1-rs = { version = "0.5.2", features = ["bits"] }

strum = "0.24"
strum_macros = "0.24"

coset = "0.3.8"
ciborium = "0.2.2"
digest = "0.10.7"
tracing = "0.1.41"
sha1 = "0.10.6"
ndef-rs = "0.2.2"

[dev-dependencies]
hex = "0.4.3"
p256 = "0.13.0"
rstest = "0.23.0"
serde_json = "*"
test-log = { version = "0.2.16", features = ["trace"] }
x509-cert = { version = "0.2.4", features = ["pem", "builder", "hazmat"] }
