[package]
name = "isomdl_examples"
version = "0.1.0"
edition = "2021"
description = "ISO mDL examples"
readme = "README.md"
license = "Apache-2.0 OR MIT"
exclude = ["test/"]

[[bin]]
name = "device_and_reader"
path = "src/device_and_reader.rs"

[dependencies]
isomdl = { path = "../" }
anyhow = "1.0"
serde_cbor = { version = "0.11.2", features = ["tags"] }
